Enable the old nand partition names by default.
Signed-off-by: Michal Suchanek <hramrach@gmail.com>

--- a/arch/arm/configs/sun4i_crane_defconfig
+++ b/arch/arm/configs/sun4i_crane_defconfig
@@ -139,6 +139,7 @@ CONFIG_BLK_DEV_CRYPTOLOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=2
 CONFIG_SUNXI_NAND=y
+CONFIG_SUNXI_NAND_COMPAT_DEV=y
 CONFIG_SUN4I_VIBRATOR=m
 CONFIG_UID_STAT=y
 CONFIG_SCSI=y
